--- a/Prevu.Synoptics.V3001-Coveris/WaterView.xaml
+++ b/Prevu.Synoptics.V3001-Coveris/WaterView.xaml
@@ -11,7 +11,7 @@
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" d:Background="{DynamicResource MaterialDesignPaper}">
-  <Canvas Height="800" Width="1850" >
+  <Canvas Height="780" Width="1850" >
     <Labels:Pipe Color="Water" Width="35" RenderTransformOrigin="0.5,0.5" StatusComponent="380-28-CV1" Canvas.Left="1305" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     <Labels:Pipe Color="Water" Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="380-28-CV1" Canvas.Left="1312" Canvas.Top="236" HorizontalAlignment="Center" VerticalAlignment="Top" >
@@ -365,7 +365,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="64"  Canvas.Left="472" Canvas.Top="665" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="526-01-MA1">
+    <Labels:Pipe Color="Water" Width="64"  Canvas.Left="472" Canvas.Top="665" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="520-22-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -375,7 +375,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="526-01-MA1" Canvas.Left="310" Canvas.Top="626" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
+    <Labels:Pipe Color="Water" Width="196" RenderTransformOrigin="0.5,0.5" StatusComponent="520-22-CV1" Canvas.Left="310" Canvas.Top="626" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -508,7 +508,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Color="Water" Width="249" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1" Canvas.Left="731" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Color="Water" Width="128" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1" Canvas.Left="1234" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Color="Water" Width="128" RenderTransformOrigin="0.5,0.5" StatusComponent="380-29-CV1" Canvas.Left="1234" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -518,7 +518,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="390-71-EC1" Canvas.Left="1079" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="380-29-CV1" Canvas.Left="1079" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -528,7 +528,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="186"  Canvas.Left="1269" Canvas.Top="399" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left" StatusComponent="390-71-EC1">
+    <Labels:Pipe Color="Water" Width="186"  Canvas.Left="1269" Canvas.Top="399" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left" StatusComponent="380-29-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
