--- a/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
@@ -22,7 +22,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="308" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="233" Canvas.Top="237">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="148" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="313" Canvas.Top="157">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -32,7 +32,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="84" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="806-23-CV1" VisibilitySignal="LS1" Canvas.Left="643" Canvas.Top="181">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="84" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="806-23-CV1" VisibilitySignal="LS1" Canvas.Left="733" Canvas.Top="181">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -42,7 +42,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="74" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="808-22-CV1" VisibilitySignal="LS1" Canvas.Left="209" Canvas.Top="361">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="74" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="808-22-CV1" VisibilitySignal="LS1" Canvas.Left="209" Canvas.Top="193">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -62,8 +62,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="279" StatusComponent="822-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="788" Canvas.Top="540" />
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="147" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="806-22-CV1" VisibilitySignal="LS1" Canvas.Left="123" Canvas.Top="311">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="190" StatusComponent="822-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="878" Canvas.Top="540" />
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="806-22-CV1" VisibilitySignal="LS1" Canvas.Left="123" Canvas.Top="143">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -73,7 +73,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="90" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="806-22-CV1" VisibilitySignal="LS1" Canvas.Left="220" Canvas.Top="352">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="806-22-CV1" VisibilitySignal="LS1" Canvas.Left="220" Canvas.Top="184">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -83,7 +83,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="806-23-CV1" VisibilitySignal="LS1" Canvas.Left="588" Canvas.Top="143">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" StatusComponent="768-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="806-23-CV1" VisibilitySignal="LS1" Canvas.Left="678" Canvas.Top="143">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -93,7 +93,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-23-CV1" VisibilitySignal="LS1" Canvas.Left="633" Canvas.Top="189">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-23-CV1" VisibilitySignal="LS1" Canvas.Left="723" Canvas.Top="189">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -113,7 +113,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="106" StatusComponent="810-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="261" Canvas.Top="651" >
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="106" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="261" Canvas.Top="471" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -123,7 +123,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" VisibilityComponent="808-22-CV1" VisibilitySignal="LS1" Canvas.Left="153" Canvas.Top="328">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" VisibilityComponent="808-22-CV1" VisibilitySignal="LS1" Canvas.Left="153" Canvas.Top="160">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -133,7 +133,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="64" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="455" Canvas.Top="706" />
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="64" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="455" Canvas.Top="526" />
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="279" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Height="25" Canvas.Left="1063" Canvas.Top="735" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -154,7 +154,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="106" StatusComponent="820-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="681" Canvas.Top="480" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="106" StatusComponent="822-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="771" Canvas.Top="480" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -164,7 +164,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="111" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-23-CV1" VisibilitySignal="LS1" Canvas.Left="560" Canvas.Top="160">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="111" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-23-CV1" VisibilitySignal="LS1" Canvas.Left="650" Canvas.Top="160">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -174,7 +174,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="130" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22"  RenderTransformOrigin="0.5,0.5" Canvas.Left="450" Canvas.Top="645">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="66" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22"  RenderTransformOrigin="0.5,0.5" Canvas.Left="482" Canvas.Top="554">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -185,8 +185,8 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="542" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="510" Canvas.Top="584" />
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="289" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="793" Canvas.Top="123" Height="9"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="746" Canvas.Top="172">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="199" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="883" Canvas.Top="123" Height="9"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="836" Canvas.Top="172">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -197,8 +197,8 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="697" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" Canvas.Left="385" Canvas.Top="85"/>
-    <Machines:Storage_silo Height="274" Canvas.Left="212" Canvas.Top="380" Width="208" HorizontalAlignment="Left" VerticalAlignment="Top" />
-    <Machines:Storage_silo Height="273" Canvas.Left="630" Canvas.Top="203" Width="209" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Machines:Storage_silo Height="274" Canvas.Left="212" Canvas.Top="203" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Machines:Storage_silo Height="273" Canvas.Left="720" Canvas.Top="203" Width="209" HorizontalAlignment="Center" VerticalAlignment="Center" />
     <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5"  Height="80" Canvas.Left="1005" Canvas.Top="695">
       <Machines:DV_Diverter_T.RenderTransform>
         <TransformGroup>
@@ -210,8 +210,8 @@
       </Machines:DV_Diverter_T.RenderTransform>
     </Machines:DV_Diverter_T>
     <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="71" Width="75" Canvas.Left="1018" Canvas.Top="625" />
-    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="299" Canvas.Top="706"/>
-    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="712" Canvas.Top="538"/>
+    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="299" Canvas.Top="526"/>
+    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left"  VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="802" Canvas.Top="538"/>
     <Machines:EC_Filtro VerticalAlignment="Top" Height="129" Canvas.Left="1068" Canvas.Top="72" HorizontalAlignment="Left" Width="119" />
     <Blowers:VT_CMM_BlowerAirCompressor HorizontalAlignment="Center" Width="51" Canvas.Left="916" Canvas.Top="720" VerticalAlignment="Top"/>
     <Rectangle HorizontalAlignment="Left" Height="83" Stroke="Black" VerticalAlignment="Center" Width="3" RenderTransformOrigin="0.5,0.5"  StrokeThickness="2" Canvas.Left="1339" Canvas.Top="674">
@@ -224,38 +224,6 @@
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Machines:External HorizontalAlignment="Left"  VerticalAlignment="Center" Height="71" Width="63" Canvas.Left="1309" Canvas.Top="625"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="848-01-MA1" Canvas.Left="896" Canvas.Top="665" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="846-01-MA1" Canvas.Left="1093" Canvas.Top="636" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="812-01-MA1" Canvas.Left="362" Canvas.Top="645" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="810-SILO" Canvas.Left="362" Canvas.Top="445" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="822-01-MA1" Canvas.Left="780" Canvas.Top="479" />
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="820-SILO" Canvas.Left="780" Canvas.Top="266"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="848-71-ECS1" Canvas.Left="1224" Canvas.Top="636" />
-    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="290" Canvas.Top="334" />
-    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="709" Canvas.Top="158"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="810-01-MA1" 
-            JumpToLabel="806-23-CV1" Canvas.Left="524" Canvas.Top="129"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="810-01-MA1" 
-            JumpToLabel="806-22-CV1" Canvas.Left="100" Canvas.Top="296" />
     <Machines:VRC_WaterCollectingTank Height="14" Width="41" Canvas.Left="1035" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Machines:VRC_WaterCollectingTank.RenderTransform>
         <TransformGroup>
@@ -266,8 +234,40 @@
         </TransformGroup>
       </Machines:VRC_WaterCollectingTank.RenderTransform>
     </Machines:VRC_WaterCollectingTank>
+    <Machines:External HorizontalAlignment="Left"  VerticalAlignment="Center" Height="71" Width="63" Canvas.Left="1309" Canvas.Top="625"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="848-01-MA1" Canvas.Left="896" Canvas.Top="665" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="846-01-MA1" Canvas.Left="1093" Canvas.Top="636" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="812-01-MA1" Canvas.Left="362" Canvas.Top="465" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="810-SILO" Canvas.Left="362" Canvas.Top="266" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="822-01-MA1" Canvas.Left="870" Canvas.Top="479" />
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="820-SILO" Canvas.Left="689" Canvas.Top="266"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="848-71-ECS1" Canvas.Left="1224" Canvas.Top="636" />
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="290" Canvas.Top="158" />
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="799" Canvas.Top="158"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Center" 
+            JumpFromLabel="810-01-MA1" 
+            JumpToLabel="806-23-CV1" Canvas.Left="604" Canvas.Top="129"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="810-01-MA1" 
+            JumpToLabel="806-22-CV1" Canvas.Left="100" Canvas.Top="129" />
     <Labels:DetailsLabel ComponentName="896-FILTER" DetailsPageName="D896" Canvas.Left="1181" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-      ComponentName="810-MIX-SILOS" Canvas.Left="479" Canvas.Top="267" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      ComponentName="810-MIX-SILOS" Canvas.Left="527" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
