--- a/Prevu.Synoptics.V3168_Sirplaste/D810.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D810.xaml
@@ -10,8 +10,10 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas Height="450" Width="320">
     <Machines:Storage_silo Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" Canvas.Left="201" Canvas.Top="48"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="201" Canvas.Top="48"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            ComponentName="810-41-WT1" Canvas.Left="27" Canvas.Top="159" VerticalAlignment="Top"/>
+            ComponentName="810-41-WT1" Canvas.Left="201" Canvas.Top="171" VerticalAlignment="Top" RenderTransformOrigin="2.099,0.989"/>
+    <Labels:DeviceLabel 
+      ComponentName="810-01-MA1" Canvas.Left="27" Canvas.Top="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
