Add water level drawings

--- a/Prevu.Synoptics.V3001-COVERIS/P330.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P330.xaml
@@ -152,8 +152,8 @@
         </TransformGroup>
       </Machines:DV_Diverter_T.RenderTransform>
     </Machines:DV_Diverter_T>
-    <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="377,490,0,0" VerticalAlignment="Top" Height="300" Width="137"/>
-    <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="870,373,0,0" VerticalAlignment="Top" Height="300" Width="136"/>
+    <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="377,490,0,0" VerticalAlignment="Top" Height="300" Width="137" ComponentName="330-41-LT1" TrendName="LEVEL"/>
+    <Machines:STR_BatchReactor HorizontalAlignment="Left" Margin="870,373,0,0" VerticalAlignment="Top" Height="300" Width="136" ComponentName="335-41-LT1" TrendName="LEVEL"/>
     <Machines:CV_Valve HorizontalAlignment="Left" Margin="341,384,0,0" VerticalAlignment="Top" Height="100" Width="100" RenderTransformOrigin="0.5,0.5">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
